@startuml

skinparam dpi 150
skinparam defaultFontName "Times New Roman"
skinparam defaultFontSize 13
skinparam shadowing false
skinparam roundCorner 0
skinparam ArrowColor #C99AAB
skinparam ArrowFontColor #202020
skinparam Padding 4
skinparam ParticipantPadding 18
skinparam BoxPadding 8
skinparam SequenceMessageAlign center
skinparam guillemet false

skinparam usecase {
  BackgroundColor #FFFADC
  BorderColor #C99AAB
  FontColor #1a1a1a
}
skinparam actor {
  BackgroundColor #FFFFFF
  BorderColor #404040
  FontColor #1a1a1a
}
skinparam rectangle {
  BackgroundColor #FAFAFA
  BorderColor #808080
}

skinparam sequence {
  ArrowColor #C99AAB
  ArrowThickness 1
  LifeLineBorderColor #C99AAB
  LifeLineBackgroundColor #FFFFFF
  ParticipantBackgroundColor #FFFADC
  ParticipantBorderColor #C99AAB
  ParticipantFontColor #1a1a1a
  ParticipantFontSize 12
  ActorBackgroundColor #FFFFFF
  ActorBorderColor #404040
  GroupBorderColor #C99AAB
  GroupBackgroundColor #FFF5F8
  BoxBorderColor #C99AAB
}

skinparam class {
  BackgroundColor #FFFADC
  BorderColor #C99AAB
  HeaderBackgroundColor #FFEFC4
  AttributeFontColor #1a1a1a
  FontColor #1a1a1a
  ArrowColor #C99AAB
  AttributeFontSize 12
  FontSize 13
}
skinparam stereotype {
  CBackgroundColor #FFF1A8
  CBorderColor #C99AAB
  EBackgroundColor #FFF1A8
  EBorderColor #C99AAB
  ABackgroundColor #FFF1A8
  ABorderColor #C99AAB
}

title Biểu đồ lớp VOPC — Use case Sinh đề bằng AI từ học liệu
left to right direction

class MaterialsPage <<boundary>>
class GenerateQuestionsPage <<boundary>>
class AiController <<control>>
class MaterialService <<control>>
class MaterialIngestionService <<control>>
class TextExtractor <<control>>
class TextChunker <<control>>
class AiJobService <<control>>
class QuestionGenerationService <<control>>
class QuestionPromptBuilder <<control>>
class QuestionJsonParser <<control>>
class AiOrchestrator <<control>>
class AiRequestLogger <<control>>
class LearningMaterial <<entity>>
class MaterialChunk <<entity>>
class AiJob <<entity>>
class Question <<entity>>

MaterialsPage --> AiController
GenerateQuestionsPage --> AiController
AiController --> MaterialService
MaterialService --> MaterialIngestionService
MaterialIngestionService --> TextExtractor
MaterialIngestionService --> TextChunker
MaterialIngestionService --> AiOrchestrator
MaterialService --> LearningMaterial
MaterialIngestionService --> MaterialChunk
AiController --> AiJobService
AiJobService --> AiJob
AiJobService --> QuestionGenerationService
QuestionGenerationService --> QuestionPromptBuilder
QuestionGenerationService --> AiOrchestrator
QuestionGenerationService --> QuestionJsonParser
QuestionGenerationService --> Question
AiOrchestrator --> AiRequestLogger
@enduml